Fixed z-index bug on the profile changer.

--- a/css/linkit.css
+++ b/css/linkit.css
@@ -82,7 +82,7 @@
   left:0;
   position:absolute;
   top:0;
-  z-index:1;
+  z-index: 211000;
   width:100%;
 }
 
